Edited theme.css, settings, standard-page.html and Mainpage.Mainpage

--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -22,6 +22,16 @@
     </div>
     
     <div class="content">
+      <div id="content"> 
+      <a href="#nav"><span>Click Here</span></a>
+      <div class="expandable" id="nav">
+      <p>Cum enim magna parturient ac elementum, tincidunt tempor ac lectus platea placerat. Eros dis lectus. Ut aliquam. Porttitor risus mattis mauris lacus a, aliquam augue cras elementum! Adipiscing, vel ridiculus diam pellentesque sociis habitasse pellentesque, augue parturient sed elementum aenean. Tincidunt tristique.</p>
+      </div>
+      <a href="#nav2"><span>Click Here</span></a>
+      <div class="expandable" id="nav2">
+      <p>Cum enim magna parturient ac elementum, tincidunt tempor ac lectus platea placerat. Eros dis lectus. Ut aliquam. Porttitor risus mattis mauris lacus a, aliquam augue cras elementum! Adipiscing, vel ridiculus diam pellentesque sociis habitasse pellentesque, augue parturient sed elementum aenean. Tincidunt tristique.</p>
+      </div>
+      </div> 
       <div anvil-slot-repeat="default" class="anvil-measure-this"></div>
       <div class="placeholder drop-here" anvil-if-slot-empty="default" anvil-drop-slot="default">Drop a ColumnPanel here.</div>
     </div>
