Edited theme.css and standard-page.html

--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -25,7 +25,8 @@
     </div>
 
         <div class="content">
-          <button class="collapsible">Show Filter</button>
+          <span class="collapsible"></span>
+          
 
           <div class="filterpanel" anvil-slot="filterpanel"></div>
           <div class="default" anvil-slot="default"></div>
