Edited theme.css, Homepage and standard-page.html

--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -27,7 +27,7 @@
         <div class="content">
           <span class="collapsible"></span>
           
-
+          <div class="filterselect" anvil-slot="filterselect"></div>
           <div class="filterpanel" anvil-slot="filterpanel"></div>
           <div class="default" anvil-slot="default"></div>
           
