--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -131,19 +131,14 @@
   }
   
   addMarginToContent()
-  window.addEventListener('resize', addMarginToContent);
-
-  var coll = document.getElementsByClassName("collapsible");
-  var i;
-  for (i = 0; i < coll.length; i++) {
-    coll[i].addEventListener("click", function() {
-      this.classList.toggle("active");
-      var content = this.nextElementSibling;
+  function filtercollapse() {   
+    var coll = document.getElementsByClassName("collapsible");
+    var content = this.nextElementSibling;
       if (content.style.maxHeight){
         content.style.maxHeight = null;
       } else {
         content.style.maxHeight = content.scrollHeight + "px";
       } 
-    });
-  }
+    };
+  
 </script>
