Edited Homepage and standard-page.html

--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -129,16 +129,26 @@
       }
     }
   }
-  
   addMarginToContent()
+  
   function filtercollapse() {   
-    var coll = document.getElementsByClassName("collapsible");
-    var content = this.nextElementSibling;
+  var coll = document.getElementsByClassName("collapsible");
+  var i;
+  for (i = 0; i < coll.length; i++) {
+    coll[i].addEventListener("click", function() {
+      this.classList.toggle("active");
+      var content = this.nextElementSibling;
       if (content.style.maxHeight){
         content.style.maxHeight = null;
       } else {
         content.style.maxHeight = content.scrollHeight + "px";
       } 
-    };
-  
+    });
+  }
+  }
+
+  function showJsAlert(message) {
+    alert(message);
+    return 42;
+}
 </script>
