--- a/theme/assets/standard-page.html
+++ b/theme/assets/standard-page.html
@@ -135,7 +135,7 @@
   function filtercollapse() {
   var coll = document.getElementsByClassName("collapsible");
   for (var i = 0; i < coll.length; i++) {
-    coll[i].addEventListener("click", toggleCollapsible);
+    toggleCollapsible.call(coll[i]);
   }
 }
 
